[package]
name = "librtorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.1"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = "1.0.228"
serde_qs = "0.15.0"
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
